--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.20",
+    "prettier": "3.2.5",
     "react-scripts": "5.0.1"
   },
   "scripts": {
