--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 		"@types/node": "^16.18.77",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
+		"@types/uuid": "^9.0.8",
 		"mapbox-gl": "^3.1.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"typescript": "^4.9.5",
+		"uuid": "^9.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"devDependencies": {
