--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
 		"@types/uuid": "^9.0.8",
+		"firebase": "^10.10.0",
 		"mapbox-gl": "^3.1.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
