--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/uuid": "^9.0.8",
 		"firebase": "^10.10.0",
 		"mapbox-gl": "^3.1.2",
+		"mui-color-input": "^2.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.22.3",
